fix(#19): make scrollbar visible again

--- a/src/scss/obsidian/scrollbars.scss
+++ b/src/scss/obsidian/scrollbars.scss
@@ -2,7 +2,7 @@
 // @use 'variables/theme';
 
 body {
-  --scrollbar-active-thumb-bg: rgb(var(--mono-rgb-100) 0.2);
-  --scrollbar-bg: rgb(var(--mono-rgb-100) 0.05);
-  --scrollbar-thumb-bg: rgb(var(--mono-rgb-100) 0.1);
+  --scrollbar-active-thumb-bg: var(--layer-hover-1) !important;
+  --scrollbar-bg: rgb(var(--mono-rgb-100)) !important;
+  --scrollbar-thumb-bg: var(--layer-1) !important;
 }
